--- a/model.properties
+++ b/model.properties
@@ -1,5 +1,9 @@
 model_name=ollama
 # model_name=llama-cpp
+useOpenAI=False
+# huggingFaceEmbeddingModel=WhereIsAI/UAE-Large-V1
+huggingFaceEmbeddingModel=BAAI/bge-large-en-v1.5
+
 
 llamaCppPath=./model_weights/codellama-7b.Q4_K_M.gguf
 llamaCppVerbose=False
