updated env file

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=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
+# OPENAI_API_KEY=<your-api-key>
+HUGGINGFACE_API_KEY=<your-api-key>
