fix use of llamacpp

--- a/model.properties
+++ b/model.properties
@@ -1,7 +1,6 @@
-model_name=ollama
-# model_name=llama-cpp
+# model_name=ollama
+model_name=llama-cpp
 useOpenAI=False
-# huggingFaceEmbeddingModel=WhereIsAI/UAE-Large-V1
 huggingFaceEmbeddingModel=BAAI/bge-large-en-v1.5
 
 
